--- a/SimpleCrud/pom.xml
+++ b/SimpleCrud/pom.xml
@@ -26,6 +26,18 @@
             <version>7.0</version>
             <scope>provided</scope>
         </dependency>
+<!-- <dependency>
+  <groupId>org.glassfish</groupId>
+  <artifactId>javax.json</artifactId>
+  <version>1.0.4</version>
+</dependency>-->
+<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.14.0-rc2</version>
+</dependency>
+
     </dependencies>
 
     <build>
