--- a/SimpleCrud/pom.xml
+++ b/SimpleCrud/pom.xml
@@ -37,6 +37,12 @@
     <artifactId>jackson-databind</artifactId>
     <version>2.14.0-rc2</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-dbcp2 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-dbcp2</artifactId>
+            <version>2.9.0</version>
+        </dependency>
 
     </dependencies>
 
