--- a/SimpleCrud/pom.xml
+++ b/SimpleCrud/pom.xml
@@ -26,11 +26,11 @@
             <version>7.0</version>
             <scope>provided</scope>
         </dependency>
-<!-- <dependency>
+ <dependency>
   <groupId>org.glassfish</groupId>
   <artifactId>javax.json</artifactId>
   <version>1.0.4</version>
-</dependency>-->
+</dependency>
 <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
 <dependency>
     <groupId>com.fasterxml.jackson.core</groupId>
